Enhancement/ CONTROLLER ENHANCEMENT generic Respoinse Util